--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </head>
     <body>
         <!--Хедер-->
-        <header class="header">
+        <!-- <header class="header">
             <div class="container header-container">
                 <nav class="navigation">
                     <a class="link logo-header" href=""
@@ -81,7 +81,7 @@
                     </li>
                 </ul>
             </div>
-        </header>
+        </header> -->
         <!--Основна частина Вебстудії-->
         <main>
             <section class="hero">
@@ -166,12 +166,20 @@
                     <h2 class="second-title-work">Чем мы занимаемся</h2>
                     <ul class="work-menu">
                         <li class="list work-menu__list">
-                            <img
-                                src="./images/box1.jpg"
-                                width="370"
-                                height="294"
-                                alt="Робота на десктопі №1"
-                            />
+                            <picture>
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="
+                                        ./images/box1.jpg    1x,
+                                        ./images/box1@2x.jpg 2x
+                                    "
+                                />
+                                <source
+                                    media="(max-width: 1199px)"
+                                    srcset="#"
+                                />
+                                <img src="#" alt="Робота на десктопі №1" />
+                            </picture>
                             <div class="work-menu__box">
                                 <h3 class="work-menu__title">
                                     Десктопные приложения
@@ -179,12 +187,20 @@
                             </div>
                         </li>
                         <li class="list work-menu__list">
-                            <img
-                                src="./images/box2.jpg"
-                                width="370"
-                                height="294"
-                                alt="Робота на десктопі №2"
-                            />
+                            <picture>
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="
+                                        ./images/box2.jpg    1x,
+                                        ./images/box2@2x.jpg 2x
+                                    "
+                                />
+                                <source
+                                    media="(max-width: 1199px)"
+                                    srcset="#"
+                                />
+                                <img src="#" alt="Робота на десктопі №2" />
+                            </picture>
                             <div class="work-menu__box">
                                 <h3 class="work-menu__title">
                                     Мобильные приложения
@@ -192,12 +208,20 @@
                             </div>
                         </li>
                         <li class="list work-menu__list">
-                            <img
-                                src="./images/box3.jpg"
-                                width="370"
-                                height="294"
-                                alt="Робота на десктоп і№3"
-                            />
+                            <picture>
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="
+                                        ./images/box3.jpg    1x,
+                                        ./images/box3@2x.jpg 2x
+                                    "
+                                />
+                                <source
+                                    media="(max-width: 1199px)"
+                                    srcset="#"
+                                />
+                                <img src="#" alt="Робота на десктоп і№3" />
+                            </picture>
                             <div class="work-menu__box">
                                 <h3 class="work-menu__title">
                                     Дизайнерские решения
@@ -213,12 +237,33 @@
                     <h2 class="second-title-work">Наша команда</h2>
                     <ul class="team-list">
                         <li class="list team-item">
-                            <img
-                                src="./images/img1.jpg"
-                                width="270"
-                                height="260"
-                                alt="Фото №1"
-                            />
+                            <picture>
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="
+                                        ./images/desktop-img1.jpg    1x,
+                                        ./images/desktop-img1@2x.jpg 2x
+                                    "
+                                />
+                                <source
+                                    media="(min-width: 768px)"
+                                    srcset="
+                                        ./images/tablet-img1.jpg    1x,
+                                        ./images/tablet-img1@2x.jpg 2x
+                                    "
+                                />
+                                <source
+                                    media="(min-width: 320px)"
+                                    srcset="
+                                        ./images/mobile-img1.jpg    1x,
+                                        ./images/mobile-img1@2x.jpg 2x
+                                    "
+                                />
+                                <img
+                                    src="./images/desktop-img1.jpg"
+                                    alt="Фото №1"
+                                />
+                            </picture>
                             <div class="team-description">
                                 <h3 class="third-title">Игорь Демьяненко</h3>
                                 <p class="third-text" lang="en">
@@ -281,12 +326,33 @@
                             </div>
                         </li>
                         <li class="list team-item">
-                            <img
-                                src="./images/img2.jpg"
-                                width="270"
-                                height="260"
-                                alt="Фото №2"
-                            />
+                            <picture>
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="
+                                        ./images/desktop-img2.jpg    1x,
+                                        ./images/desktop-img2@2x.jpg 2x
+                                    "
+                                />
+                                <source
+                                    media="(min-width: 768px)"
+                                    srcset="
+                                        ./images/tablet-img2.jpg    1x,
+                                        ./images/tablet-img2@2x.jpg 2x
+                                    "
+                                />
+                                <source
+                                    media="(min-width: 320px)"
+                                    srcset="
+                                        ./images/mobile-img2.jpg    1x,
+                                        ./images/mobile-img2@2x.jpg 2x
+                                    "
+                                />
+                                <img
+                                    src="./images/desktop-img2.jpg"
+                                    alt="Фото №2"
+                                />
+                            </picture>
                             <div class="team-description">
                                 <h3 class="third-title">Ольга Репина</h3>
                                 <p class="third-text" lang="en">
@@ -349,12 +415,33 @@
                             </div>
                         </li>
                         <li class="list team-item">
-                            <img
-                                src="./images/img3.jpg"
-                                width="270"
-                                height="260"
-                                alt="Фото №3"
-                            />
+                            <picture>
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="
+                                        ./images/desktop-img3.jpg    1x,
+                                        ./images/desktop-img3@2x.jpg 2x
+                                    "
+                                />
+                                <source
+                                    media="(min-width: 768px)"
+                                    srcset="
+                                        ./images/tablet-img3.jpg    1x,
+                                        ./images/tablet-img3@2x.jpg 2x
+                                    "
+                                />
+                                <source
+                                    media="(min-width: 320px)"
+                                    srcset="
+                                        ./images/mobile-img3.jpg    1x,
+                                        ./images/mobile-img3@2x.jpg 2x
+                                    "
+                                />
+                                <img
+                                    src="./images/desktop-img3.jpg"
+                                    alt="Фото №3"
+                                />
+                            </picture>
                             <div class="team-description">
                                 <h3 class="third-title">Николай Тарасов</h3>
                                 <p class="third-text" lang="en">Marketing</p>
@@ -415,12 +502,33 @@
                             </div>
                         </li>
                         <li class="list team-item">
-                            <img
-                                src="./images/img4.jpg"
-                                width="270"
-                                height="260"
-                                alt="Фото №4"
-                            />
+                            <picture>
+                                <source
+                                    media="(min-width: 1200px)"
+                                    srcset="
+                                        ./images/desktop-img4.jpg    1x,
+                                        ./images/desktop-img4@2x.jpg 2x
+                                    "
+                                />
+                                <source
+                                    media="(min-width: 768px)"
+                                    srcset="
+                                        ./images/tablet-img4.jpg    1x,
+                                        ./images/tablet-img4@2x.jpg 2x
+                                    "
+                                />
+                                <source
+                                    media="(min-width: 320px)"
+                                    srcset="
+                                        ./images/mobile-img4.jpg    1x,
+                                        ./images/mobile-img4@2x.jpg 2x
+                                    "
+                                />
+                                <img
+                                    src="./images/desktop-img4.jpg"
+                                    alt="Фото №4"
+                                />
+                            </picture>
                             <div class="team-description">
                                 <h3 class="third-title">Михаил Ермаков</h3>
                                 <p class="third-text" lang="en">UI Designer</p>
@@ -483,6 +591,7 @@
                     </ul>
                 </div>
             </section>
+
             <section class="clients">
                 <div class="container clients-container">
                     <h2 class="second-title-work">Постоянные клиенты</h2>
@@ -569,6 +678,7 @@
                 </div>
             </section>
         </main>
+
         <!--Футер-->
         <footer class="footer">
             <div class="container united-footer">
@@ -671,6 +781,7 @@
                                 name="email"
                                 placeholder="E-mail"
                                 required
+                                autocomplete="off"
                             />
                         </label>
                         <button class="footer-button" type="submit">
@@ -777,3 +888,14 @@
         <script src="./js/modal.js"></script>
     </body>
 </html>
+
+<!-- li:after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    right: -21px;
+    width: 22px;
+    height: 0px;
+    border-bottom:        1px solid rgba(33,33,33,0.2);
+    transform: rotate(90deg);
+}  -->
