--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="./css/main.min.css" />
     </head>
     <body>
-        <!--Хедер-->
+        <!-- Хедер
         <header class="header">
             <div class="container header-container">
                 <nav class="navigation">
@@ -79,7 +79,7 @@
                     </li>
                 </ul>
             </div>
-        </header>
+        </header> -->
         <!--Основна частина Портфоліо-->
         <main>
             <section class="main-portfolio container">
@@ -104,7 +104,7 @@
                         <button type="button" class="button">Маркетинг</button>
                     </li>
                 </ul>
-                <ul class="network">
+                <!-- <ul class="network">
                     <li class="list network-item">
                         <a class="link network-link" href=""
                             ><div class="network-overlay">
@@ -334,100 +334,119 @@
                             </div>
                         </a>
                     </li>
-                </ul>
+                </ul> -->
             </section>
         </main>
+
         <!--Футер-->
         <footer class="footer">
             <div class="container united-footer">
-                <div class="footer-container">
-                    <a class="link logo-footer" href=""
-                        ><span class="header-icon-web">Web</span>Studio</a
-                    >
-                    <address class="footer-list">
-                        <ul>
-                            <li class="list footer-list-menu">
+                <div class="two-footer-blocks">
+                    <div class="footer-container">
+                        <a class="link logo-footer" href=""
+                            ><span class="header-icon-web">Web</span>Studio</a
+                        >
+                        <address class="footer-list">
+                            <ul>
+                                <li class="list footer-list-menu">
+                                    <a
+                                        class="link footer-link location"
+                                        href="https://goo.gl/maps/nv5SZCN8T1ZSqGjS6"
+                                        target="_blank"
+                                        rel="noopener noreferrer"
+                                        >г. Киев, пр-т Леси Украинки, 26</a
+                                    >
+                                </li>
+                                <li class="list footer-list-menu">
+                                    <a
+                                        class="link footer-link"
+                                        href="mailto:info@example.com"
+                                        >info@example.com</a
+                                    >
+                                </li>
+                                <li class="list footer-list-menu">
+                                    <a
+                                        class="link footer-link"
+                                        href="tel:+380991111111"
+                                        >+38 099 111 11 11</a
+                                    >
+                                </li>
+                            </ul>
+                        </address>
+                    </div>
+                    <div class="our-networks">
+                        <h3 class="join-title">присоединяйтесь</h3>
+                        <ul class="network-contacts">
+                            <li class="list network-list">
                                 <a
-                                    class="link footer-link location"
-                                    href="https://goo.gl/maps/nv5SZCN8T1ZSqGjS6"
-                                    target="_blank"
-                                    rel="noopener noreferrer"
-                                    >г. Киев, пр-т Леси Украинки, 26</a
-                                >
+                                    class="team-contacts-link link-network"
+                                    href=""
+                                    ><svg
+                                        class="
+                                            icon-main-color icon-footer-color
+                                        "
+                                        width="20"
+                                        height="20"
+                                    >
+                                        <use
+                                            href="./images/sprite.svg#icon-instagram"
+                                        ></use>
+                                    </svg>
+                                </a>
                             </li>
-                            <li class="list footer-list-menu">
+                            <li class="list network-list">
                                 <a
-                                    class="link footer-link"
-                                    href="mailto:info@example.com"
-                                    >info@example.com</a
-                                >
+                                    class="team-contacts-link link-network"
+                                    href=""
+                                    ><svg
+                                        class="
+                                            icon-main-color icon-footer-color
+                                        "
+                                        width="20"
+                                        height="20"
+                                    >
+                                        <use
+                                            href="./images/sprite.svg#icon-twitter"
+                                        ></use>
+                                    </svg>
+                                </a>
                             </li>
-                            <li class="list footer-list-menu">
+                            <li class="list network-list">
                                 <a
-                                    class="link footer-link"
-                                    href="tel:+380991111111"
-                                    >+38 099 111 11 11</a
-                                >
+                                    class="team-contacts-link link-network"
+                                    href=""
+                                    ><svg
+                                        class="
+                                            icon-main-color icon-footer-color
+                                        "
+                                        width="20"
+                                        height="20"
+                                    >
+                                        <use
+                                            href="./images/sprite.svg#icon-facebook"
+                                        ></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="list network-list">
+                                <a
+                                    class="team-contacts-link link-network"
+                                    href=""
+                                    ><svg
+                                        class="
+                                            icon-main-color icon-footer-color
+                                        "
+                                        width="20"
+                                        height="20"
+                                    >
+                                        <use
+                                            href="./images/sprite.svg#icon-linkedin"
+                                        ></use>
+                                    </svg>
+                                </a>
                             </li>
                         </ul>
-                    </address>
-                </div>
-                <div class="our-networks">
-                    <h3 class="join-title">присоединяйтесь</h3>
-                    <ul class="network-contacts">
-                        <li class="list network-list">
-                            <a class="team-contacts-link link-network" href=""
-                                ><svg
-                                    class="icon-main-color icon-footer-color"
-                                    width="20"
-                                    height="20"
-                                >
-                                    <use
-                                        href="./images/sprite.svg#icon-instagram"
-                                    ></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="list network-list">
-                            <a class="team-contacts-link link-network" href=""
-                                ><svg
-                                    class="icon-main-color icon-footer-color"
-                                    width="20"
-                                    height="20"
-                                >
-                                    <use
-                                        href="./images/sprite.svg#icon-twitter"
-                                    ></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="list network-list">
-                            <a class="team-contacts-link link-network" href=""
-                                ><svg
-                                    class="icon-main-color icon-footer-color"
-                                    width="20"
-                                    height="20"
-                                >
-                                    <use
-                                        href="./images/sprite.svg#icon-facebook"
-                                    ></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="list network-list">
-                            <a class="team-contacts-link link-network" href=""
-                                ><svg
-                                    class="icon-main-color icon-footer-color"
-                                    width="20"
-                                    height="20"
-                                >
-                                    <use
-                                        href="./images/sprite.svg#icon-linkedin"
-                                    ></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
+                    </div>
                 </div>
                 <div class="sign-for-mailing">
                     <h3 class="join-title">Подпишитесь на рассылку</h3>
