--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,8 @@
         <link rel="stylesheet" href="./css/main.min.css" />
     </head>
     <body>
-        <!-- Хедер
+        <!--Хедер-->
+
         <header class="header">
             <div class="container header-container">
                 <nav class="navigation">
@@ -44,10 +45,10 @@
                         </li>
                     </ul>
                 </nav>
-                <ul class="list-item info">
-                    <li class="list item">
+                <ul class="list-item-two info">
+                    <li class="list item-two">
                         <a
-                            class="link list-item-link pasivecolor"
+                            class="link list-item-link-two pasivecolor"
                             href="mailto:info@devstudio.com"
                             ><svg
                                 class="logo-icon icon-header-color"
@@ -61,9 +62,9 @@
                             info@devstudio.com</a
                         >
                     </li>
-                    <li class="list item">
+                    <li class="list item-two">
                         <a
-                            class="link list-item-link pasivecolor"
+                            class="link list-item-link-two pasivecolor"
                             href="tel:+380961111111"
                             ><svg
                                 class="logo-icon icon-header-color"
@@ -79,8 +80,10 @@
                     </li>
                 </ul>
             </div>
-        </header> -->
+        </header>
+
         <!--Основна частина Портфоліо-->
+
         <main>
             <section class="main-portfolio container">
                 <h1 class="visually-hidden">Скритий заголовок</h1>
