--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </button>
           <ul class="nav-list">
             <li class="list nav-list-point">
-              <a href="" class="link nav-list-link">Студия</a>
+              <a href="" class="link nav-list-link curcolor">Студия</a>
             </li>
             <li class="list nav-list-point">
               <a href="" class="link nav-list-link">Портфолио</a>
@@ -92,10 +92,12 @@
           <div class="contacts-thumb">
             <ul class="mobile-contacts">
               <li class="list contacts-item">
-                <a href="" class="link contacts-link">info@devstudio.com</a>
+                <a href="" class="link contacts-link curcolor cur-font-size">
+                  +38 096 111 11 11</a
+                >
               </li>
               <li class="list contacts-item">
-                <a href="" class="link contacts-link"> +38 096 111 11 11</a>
+                <a href="" class="link contacts-link">info@devstudio.com</a>
               </li>
             </ul>
 
