--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
               <a href="" class="link nav-list-link">Студия</a>
             </li>
             <li class="list nav-list-point">
-              <a href="" class="link nav-list-link">Портфолио</a>
+              <a href="" class="link nav-list-link curcolor">Портфолио</a>
             </li>
             <li class="list nav-list-point">
               <a href="" class="link nav-list-link">Контакты</a>
@@ -90,10 +90,12 @@
           <div class="contacts-thumb">
             <ul class="mobile-contacts">
               <li class="list contacts-item">
-                <a href="" class="link contacts-link">info@devstudio.com</a>
+                <a href="" class="link contacts-link curcolor cur-font-size">
+                  +38 096 111 11 11</a
+                >
               </li>
               <li class="list contacts-item">
-                <a href="" class="link contacts-link"> +38 096 111 11 11</a>
+                <a href="" class="link contacts-link">info@devstudio.com</a>
               </li>
             </ul>
 
