--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
               <a href="" class="link nav-list-link curcolor">Студия</a>
             </li>
             <li class="list nav-list-point">
-              <a href="" class="link nav-list-link">Портфолио</a>
+              <a href="./portfolio.html" class="link nav-list-link"
+                >Портфолио</a
+              >
             </li>
             <li class="list nav-list-point">
               <a href="" class="link nav-list-link">Контакты</a>
