--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
           </button>
           <ul class="nav-list">
             <li class="list nav-list-point">
-              <a href="" class="link nav-list-link">Студия</a>
+              <a href="./index.html" class="link nav-list-link">Студия</a>
             </li>
             <li class="list nav-list-point">
               <a href="" class="link nav-list-link curcolor">Портфолио</a>
